Flicker fixing

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -41,69 +41,8 @@ md-sidenav.md-closed.md-locked-open-add-active {
   background-color: rgba(217,217,217,0.8);
 }
 
-section#profile_introduction {
-  // background-color: rgba(47,89,117,1.0);
+section#profile_introduction, section#projects {
   line-height: 1.5;
-}
-
-// .profile-introduction-header {
-//   background-color: rgba(47,89,117,1.0);
-//   color: rgba(255,255,255,0.87);
-// }
-//
-// section#profile_experience {
-//   background-color: rgba(47,117,89,1.0);
-// }
-//
-// .profile-experience-header {
-//   background-color: rgba(47,117,89,1.0);
-//   color: rgba(255,255,255,0.87);
-// }
-//
-// section#profile_technology {
-//   background-color: rgba(236,136,21,1.0);
-//   color: rgba(255,255,255,0.87);
-// }
-//
-// .profile-technology-header {
-//   background-color: rgba(236,136,21,1.0);
-//   color: rgba(255,255,255,0.87);
-// }
-//
-// section#profile_education {
-//   background-color: rgba(89,117,47,1.0);
-// }
-//
-// .profile-education-header {
-//   background-color: rgba(89,117,47,1.0);
-//   color: rgba(255,255,255,0.87);
-// }
-//
-// section#profile_awards {
-//   background-color: rgba(30,207,214,1.0);
-// }
-//
-// .profile-awards-header {
-//   background-color: rgba(30,207,214,1.0);
-//   color: rgba(255,255,255,0.87);
-// }
-//
-// section#profile_connect {
-//   background-color: rgba(117,47,89,1.0);
-// }
-//
-// .profile-connect-header {
-//   background-color: rgba(117,47,89,1.0);
-//   color: rgba(255,255,255,0.87);
-// }
-
-section#projects {
-  line-height: 1.5;
-  // background: blueviolet;
-  // background: -webkit-linear-gradient(blueviolet, lightgreen);
-  // background: -o-linear-gradient(blueviolet, lightgreen);
-  // background: -moz-linear-gradient(blueviolet, lightgreen);
-  // background: linear-gradient(blueviolet, lightgreen);
 }
 
 md-card.tech-card {
